--- a/abstract.tex
+++ b/abstract.tex
@@ -1,8 +1,10 @@
 \begin{abstract}
-We propose a new kind of middlebox, called \name.
+Queues represent scheduling power: where queues build, operators can enforce scheduling policy by reordering or rate-limiting packets.
+In the Internet today, however, there is a mismatch between where queues build and where scheduling policy is most effectively enforced; while queues build at bottleneck links in the middle of the network, domains at the edge have the most visibility to specify scheduling policy for their traffic.
+To resolve this mismatch, we propose a new kind of middlebox, called \name.
 \name sits at the edge of a sender's domain and \emph{bundles} together groups of flows that share a common destination domain. 
 It does rate control for each bundle, such that the queuing induced by its traffic is moved from the bottleneck (wherever it might be in the network) to \name itself. 
 This allows the sender to enforce its desired scheduling policy across the bundled traffic. 
 \name has an immediately deployable, light-weight design, which we implement in only $\sim1500$ lines of code. 
-Our evaluation, on real Internet paths and on a variety of emulated scenarios, shows that in a scenario with self-inflicted scheduling overhead, \name achieves 33\% lower median slowdown than the status quo.
+Our evaluation, on real Internet paths and on a variety of emulated scenarios, shows that in a scenario with self-inflicted scheduling overhead, \name achieves 33\% lower median normalized flow completion time than the status quo scenario with queueing in the middle of the network.
 \end{abstract}
