--- a/abstract.tex
+++ b/abstract.tex
@@ -6,5 +6,5 @@ To resolve this mismatch, we propose a new kind of middlebox, called \name.
 It does rate control for each bundle, such that the queuing induced by its traffic is moved from the bottleneck (wherever it might be in the network) to \name itself. 
 This allows the sender to enforce its desired scheduling policy across the bundled traffic. 
 \name has an immediately deployable, light-weight design, which we implement in only $\sim1500$ lines of code. 
-Our evaluation, on real Internet paths and on a variety of emulated scenarios, shows that in a scenario with self-inflicted scheduling overhead, \name achieves 33\% lower median normalized flow completion time than the status quo scenario with queueing in the middle of the network.
+Our evaluation, on real Internet paths and on a variety of emulated scenarios, shows that, \name achieves 33\% lower median normalized flow completion time than the status quo scenario with queueing in the middle of the network.
 \end{abstract}
