--- a/deployment.tex
+++ b/deployment.tex
@@ -31,11 +31,12 @@ We briefly discuss how the nature of this congestion influences \name's benefits
 \paragraphi{Self-inflicted congestion} This occurs when traffic from a single bundle causes a queue to build up at the bottleneck links in the network, even without any other cross-traffic. It can happen when a small carrier network does not have enough capacity to sustain the large volume of traffic sent by a content provider to a receiving domain, or due to explicit rate limiting commonly done by ISPs~\cite{isp-throttle-1, isp-throttle-2, isp-throttle-3}. In such cases, \name can result in
 significant improvements in performance, as it would then have control over the entire queue. In our experiments (\S\ref{s:eval}), we found this to be the case.
 
-\paragraphi{Congestion due to bundled cross-traffic} In-network congestion can further increase in the presence of other cross-traffic (\eg when the peering link between Carrier B and the enterprise in Figure~\ref{fig:deploy:arch} is shared by traffic from multiple sending domains). \name continues to provide benefits when such competing flows also belong to bundles created by the {\inbox}es deployed in other domains; the rate control algorithm at each of these {\inbox}es would ensure that the in-network queues remain small, and appropriate scheduling policy would be applied to the per-bundle queues built at the {\inbox}es.
+\paragraphi{Congestion due to bundled cross-traffic} In-network congestion can further increase in the presence of other cross-traffic (\eg when the peering link between Carrier B and the enterprise in Figure~\ref{fig:deploy:arch} is shared by traffic from multiple sending domains). 
+\name continues to provide benefits when the competing flows are part of other bundles from/to other domains because the rate control algorithm at each of the other {\inbox}es would ensure that the in-network queues remain small. Since each \inbox controls its own delays, it can apply the appropriate scheduling policy its the per-bundle queues.
 We expect this to become the common form of observed congestion as more domains deploy \name. 
 
 \paragraphi{Congestion due to un-bundled cross-traffic} We now consider the scenario where the cross-traffic includes flows from domains that have not yet deployed a \name. If all such \emph{un-bundled} competing flows are short-lived (up to a few MBs), the bundled traffic still sees significant performance benefits. 
-However, if the cross traffic includes a persistent backlogged flow that aggressively fills up any available buffer space at the bottleneck link, then, in order to compete fairly, \name would push more packets into the network (as described in \S\ref{s:impl:prototype}), thus relinquishing its control over the bundled traffic and falling back to the status quo performance. 
+However, if the cross traffic aggressively fills up available buffer space at the bottleneck link, to compete fairly \name would have to push more packets into the network (as described in \S\ref{s:queue-ctl}), relinquishing control over bundled traffic.
 This scenario is a limitation of \name's design, since it forces \name to fall back to status-quo performance.
 \an{reword} Such flows are unlikely to arrive very frequently~\cite{caida-dataset}. 
 
