--- a/intro.tex
+++ b/intro.tex
@@ -2,7 +2,7 @@
 
 % scheduling is good
 Internet content providers often want to specify scheduling policies for their traffic. 
-For example, a video streaming company might benefit from weighted fair queueing across its video traffic to its many different users sharing a bottleneck, and web sites might want to prioritize interactive web traffic (e.g., e-commerce) over bulk file transfers. 
+For example, a video streaming company might benefit from weighted fair queueing across its video traffic to its many different users sharing a bottleneck. Alternately, a web site might want to prioritize interactive web traffic (e.g., e-commerce) over bulk file transfers. 
 There exists a vast literature on mechanisms for such scheduling and queue management policies~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn}.
 These mechanisms can decrease average flow-completion times, ensure low packet delays, isolate classes of traffic from each other, and more.
 
@@ -40,7 +40,7 @@ The natural question that arises is, how can the queues be ``moved''? This is th
 %We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of a network domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They thus provide an effective vantage point for aggregating and managing traffic. 
 To move the queues and schedule traffic bundles, we propose a new type of middlebox, called \name, that (1) dynamically aggregates the traffic at the content provider's egress into appropriate bundles, (2) does rate control for each bundle to move the corresponding queues from within the network to itself, and (3) applies scheduling and AQM policies within each bundle. 
 
-Each domain must deploy one middlebox, which is logically composed of sender-side (\inbox) and receiver-side (\outbox) functionality;
+Each domain must deploy one middlebox , which is logically composed of sender-side (\inbox) and receiver-side (\outbox) functionality (as in Figure~\ref{s:deploy:arch});
 a \emph{bundle} is a group of flows traversing the same \inbox{}-\outbox{} pair.
 The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to identify bundles and measure congestion signals such as the round-trip time and the rate at which packets are received.
 The \inbox passes these signals to a congestion control algorithm (requiring certain properties described in \S\ref{s:design}) which computes appropriate sending rates for each bundle. 
@@ -49,7 +49,7 @@ By varying the sending rate, the \inbox ensures that the queuing induced by the 
 We introduce a lightweight method for the coordination between the \inbox and the \outbox which does not require any per-flow state and can be deployed in a mode that forwards packets without modification. \name requires no changes to the end hosts or to the routers in the network.
  
 Note that our goal is to perform scheduling and queue management only on the traffic within the same bundle. We do not currently attempt to control traffic across different bundles. 
-Furthermore, as we will discuss in \S\ref{s:deploy}, there may be instances where \name cannot improve performance for the bundled traffic, and falls back to the status quo performance. 
+Furthermore, as we will discuss in \S\ref{s:deploy}, there may be instances where \name cannot improve performance for the bundled traffic, and falls back to the status quo performance; \ie the performance achieved today when queues build in the network instead of the edge. 
 Despite these limitations, we believe that our work provides a deployable solution for enabling some of the benefits of scheduling and queue management in the Internet from the edge of the content provider's network.
  
 We make the following contributions:
