--- a/queue-control.tex
+++ b/queue-control.tex
@@ -3,15 +3,19 @@
 Recall that \name's key trick is to use delay-minimizing congestion control algorithms from the bottleneck to the \inbox.
 However, a well-known property of delay-minimizing congestion control algorithms is that when competing with traditional window-probing controllers, they lose throughput~\cite{copa}.
 Therefore, it is important for congestion controllers at the \inbox to detect the presence of such algorithms and disable the use of delay-control in these situations.
-With delay-control disabled, the \emph{end-to-end} congestion control algorithms controlling \name's component traffic will fill buffers at the true bottleneck instead of at the \inbox.
-Because the \inbox will no longer have queueing, component traffic will fall back to status-quo performance.
-Buffer-filling cross traffic is rare~\cite{something}, so once such cross traffic goes away, \name's congestion controller will resume building queues and applying scheduling policy.
 
-This leaves us with two questions: 
-(1) what mechanisms do we need to support the cross-traffic detection module (\S\ref{s:qctl:nimbus})? and
-(2) once \name detects buffer-filling cross traffic, how should it react (\S\ref{s:qctl:ctl})? 
+\subsection{Fairness Control}\label{s:qctl:fair}
+What should the \inbox do when Nimbus indicates the presence of buffer-filling cross traffic?
+A naive approach would be to emulate the end-host behaviour and run Cubic. This approach has two shortcomings.
+First, it must solve the MulTCP~\cite{multcp} problem: a bundle may comprise of multiple Cubic connections, and to achieve a fair bandwidth share it should therefore compete as aggressively as the number of component flows. 
+On some high-performance datapaths, it may be difficult to measure this number~\cite{heavy-hitters}.
+
+We propose a simpler solution.
+Recall that bundles comprise of traditional end-host connections, with their own congestion controllers. 
+If we simply \emph{let the traffic pass}, these end-host congestion controllers will naturally compete fairly with cross traffic, just as traffic in the Internet does today. 
 
 \subsection{Active Probing}\label{s:qctl:nimbus}
+When does the \inbox know it is safe to resume delay-control and scheduling?
 Because bundles include buffer-filling cross traffic, it is important to distinguish between \emph{self-inflicted} queueing delay and queueing delay due to cross traffic.
 When the queueing delay is purely self-inflicted, it is safe to resume control over the queues at the \inbox.
 Passive probing is insufficient to determine this state, since passive measurements of the bottleneck will be identical in the case of self-inflicted queueing and queueing driven by cross traffic.
@@ -20,17 +24,11 @@ This is what the Nimbus mechanism does.
 At a high level\footnote{A full description and evaluation of Nimbus is in concurrently submitted work, Paper \an{XX}}, 
 Nimbus sinusoidally varies the sending rate $r(t) = A sin(\frac{4\pi{}t}{T})$ during the up-pulse, where $A$ is the pulse amplitude (set to one-fourth of the estimated bottleneck bandwidth) and $T$ is the pulse duration, and measures the cross traffic's response in the frequency domain.
 The \inbox can use the Nimbus algorithm to detect when to relinquish control over the queue by interposing this sending pattern over the delay-controller's rate decisions.
-
-\subsection{Fairness Control}\label{s:qctl:ctl}
-What should the \inbox do when Nimbus indicates the presence of buffer-filling cross traffic?
-A naive approach would be to emulate the end-host behaviour and run Cubic. This approach has two shortcomings.
-First, it must solve the MulTCP~\cite{multcp} problem: a bundle may comprise of multiple Cubic connections, and to achieve a fair bandwidth share it should therefore compete as aggressively as the number of component flows. On some high-performance datapaths, it may be difficult to measure this number~\cite{heavy-hitters}.
-
-We propose a simpler solution: since bundles already comprise of connections that end-hosts control, if we simply \emph{let the traffic pass} the bundle will naturally compete fairly with cross traffic, just as traffic in the Internet does today. 
-However, we must be careful when letting the traffic pass; if the \inbox entirely drains its queues into the network, it will no longer be possible for Nimbus to overlay pulses onto the traffic pattern, and it will be unable to determine the nature of the cross traffic.
+However, this implies that we must be careful when letting the traffic pass; if the \inbox entirely drains its queues into the network, it will no longer be possible for Nimbus to overlay pulses onto the traffic pattern, and it will be unable to determine the nature of the cross traffic.
 Practically, this would mean that once \inbox switches to compete with cross traffic, it would never gain the information necessary to switch back.
 
-Therefore, to support active probing while also letting the traffic pass, the \inbox should hold back some packets while letting the remainder pass.
+\subsection{Queue Controller}\label{s:qctl:ctl}
+To support active probing while also letting the traffic pass, the \inbox should hold back some packets while letting the remainder pass.
 How many packets should this be? The \inbox should be able to generate enough packets for a Nimbus up-pulse, \ie the area under the up-pulse curve: 
 $A \int_0^{\frac{T}{4}} sin(\frac{4\pi{}t}{T}) dt = \frac{AT}{2\pi}$.
 From Nimbus, we use $T = 0.2$ seconds and $A$ is as above, one-fourth the bottleneck bandwidth. By Little's law, we can calculate the amount of extra queueing: $\frac{T}{8\pi}$, or $8$ms.
@@ -38,8 +36,16 @@ We thus configure the \inbox to hold back $8$ms of queueing for active probing.
 Note that this extra queueing is in addition to queueing in the network. As a result, the end-to-end Cubic connections will see RTT inflation, and experience slightly lower throughput due to RTT unfairness. In \an{forward pointer to eval} we show that \name still achieves status quo performance.
 
 To control the queue to $8$ms, we implement a PI controller at the \inbox as part of the fairness control module. 
-It overlays a rate $r(t) = \alpha (q - q_T) + \beta (\dot{q})$, where $q$ is the queue size and $q_T$ is the target queue size computed above.
-\an{We somehow determined $\alpha = 100$ and $\beta = 10000$.}
+It overlays a rate $r$ corresponding to $\dot{r}(t) = \alpha (q - q_T) + \beta (\dot{q})$, where $q$ is the queue size and $q_T$ is the target queue size computed above.
+This form of delay
+We pick $\alpha = 10$ and $\beta = 10$ as per \S\ref{s:qctl:pi}.
+
+\begin{Appendix}
+\section{Queue Controller Stability}\label{s:qctl:pi}
+
+
+
+\end{Appendix}
 
 \cut{
 \begin{outline}
