--- a/packages.tex
+++ b/packages.tex
@@ -57,6 +57,8 @@
 \newcommand{\hlkwc}[1]{\textcolor[rgb]{0.333,0.667,0.333}{#1}}%
 \newcommand{\hlkwd}[1]{\textcolor[rgb]{0.737,0.353,0.396}{\textbf{#1}}}%
 
+\interfootnotelinepenalty=10000
+
 \usepackage{framed}
 \makeatletter
 \newenvironment{kframe}{%
