fix typo in convergence analysis

--- a/queue-control.tex
+++ b/queue-control.tex
@@ -70,13 +70,13 @@ $\ddot{q}(t) - \beta \dot{q}(t) + \alpha (q(t) - q_T) = A \frac{2\pi{}t}{T} cos(
 
 $\ddot{y}(t) - \beta \dot{y}(t) + \alpha y(t) = 10\pi{}A cos(10\pi{}t)$.
 
-This has the standard-form solution:
+    \noindent This has the standard-form solution \an{todo cite a textbook}:
 
-$y(t) = c_1 e^{r_1 t} + c_2 e^{r_2 t} + \frac{10\pi{}A}{|P(10\pi{}i|} cos(10\pi{}i + \phi)$ where $P$ is the characteristic polynomial and $r_1, r_2$ are its roots.
+$y(t) = c_1 e^{r_1 t} + c_2 e^{r_2 t} + \frac{10\pi{}A}{|p(10\pi{}i|} cos(10\pi{}i - \phi)$ where $p$ is the characteristic polynomial and $r_1, r_2$ are its roots.
 
 \noindent We want: (1) the $r_1$, $r_2$ to be large, so the queue converges quickly, and (2) the pulse amplitude to be approximately the Nimbus pulse amplitude, so:
 
-$\frac{10\pi{}A}{|P(10\pi{}i|} = \frac{A}{5\pi}$.
+$\frac{10\pi{}A}{|p(10\pi{}i|} = \frac{A}{5\pi}$.
 
 $\alpha = 10, \beta = 10$ satisfy these constraints.
 \end{Appendix}
