fix reference spelling error

--- a/ref.bib
+++ b/ref.bib
@@ -1748,7 +1748,7 @@ year = {2016},
 } 
 
 @misc{labovitz,
-    author = {Craig Lagovitz},
+    author = {Craig Labovitz},
     title = {{Internet Inter-Domain Traffic}},
     howpublished = {\url{https://conferences.sigcomm.org/sigcomm/2010/slides/S3Labovitz.pdf}},
     year = {2010}
